force-app/main/default/objects/Correspondence_Fulfilment__c/Correspondence_Fulfilment__c.object-meta.xml
<CustomObject>
    <label>Correspondence &amp; Fulfilment</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Correspondence &amp; Fulfilment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Correspondence &amp; Fulfilments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>