force-app/main/default/objects/Correspondence_Fulfilment__c/fields/Accnumber__c.field-meta.xml
<CustomField>
    <fullName>Accnumber__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Account number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>