force-app/main/default/objects/Correspondence_Fulfilment__c/fields/Add1__c.field-meta.xml
<CustomField>
    <fullName>Add1__c</fullName>
    <description>Address 1(always has the street address in this filed)</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Address 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>