force-app/main/default/objects/Correspondence_Fulfilment__c/fields/Add2__c.field-meta.xml
<CustomField>
    <fullName>Add2__c</fullName>
    <description>Address 2 (apt or floor number)</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Address 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>