force-app/main/default/objects/Correspondence_Fulfilment__c/fields/BCode__c.field-meta.xml
<CustomField>
    <fullName>BCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Brand Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>