force-app/main/default/objects/Correspondence_Fulfilment__c/fields/Brand_Corres__c.field-meta.xml
<CustomField>
    <fullName>Brand_Corres__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand</label>
    <referenceTo>Brand__c</referenceTo>
    <relationshipLabel>Correspondence &amp; Fulfilments</relationshipLabel>
    <relationshipName>Correspondence_Fulfilments</relationshipName>
    <type>Lookup</type>
</CustomField>