force-app/main/default/objects/Correspondence_Fulfilment__c/fields/BrandDesc__c.field-meta.xml
<CustomField>
    <fullName>BrandDesc__c</fullName>
    <description>Feed outbound- Correspondence</description>
    <formula>Brand_Corres__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand</label>
    <type>Text</type>
</CustomField>