force-app/main/default/objects/Correspondence_Fulfilment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Correspondence/Fulfilments</relationshipLabel>
    <relationshipName>Correspondence_Fulfilments</relationshipName>
    <type>Lookup</type>
</CustomField>