force-app/main/default/objects/Correspondence_Fulfilment__c/fields/DocType__c.field-meta.xml
<CustomField>
    <fullName>DocType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Feed outbound- Correspondence</description>
    <label>Document Type</label>
    <referenceTo>DocumentType__c</referenceTo>
    <relationshipLabel>Correspondence &amp; Fulfilments</relationshipLabel>
    <relationshipName>Correspondence_Fulfilments</relationshipName>
    <type>Lookup</type>
</CustomField>