force-app/main/default/objects/Correspondence_Fulfilment__c/fields/Document_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Document_Type_Code__c</fullName>
    <description>Feed outbound- Correspondence</description>
    <formula>TEXT(DocType__r.DocTyp__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Type Code</label>
    <type>Text</type>
</CustomField>