force-app/main/default/objects/Correspondence_Fulfilment__c/fields/DocumentOpCompany__c.field-meta.xml
<CustomField>
    <fullName>DocumentOpCompany__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Operating  Company</label>
    <length>18</length>
    <type>Text</type>
</CustomField>