force-app/main/default/objects/Correspondence_Fulfilment__c/fields/Extract_Date__c.field-meta.xml
<CustomField>
    <fullName>Extract_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Extract Date</label>
    <type>DateTime</type>
</CustomField>