force-app/main/default/objects/Correspondence_Fulfilment__c/fields/FileExtension__c.field-meta.xml
<CustomField>
    <fullName>FileExtension__c</fullName>
    <formula>RIGHT( FileName__c , LEN(FileName__c ) - FIND(&quot;.&quot;,FileName__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FileExtension</label>
    <type>Text</type>
</CustomField>