force-app/main/default/objects/Correspondence_Fulfilment__c/fields/FileName__c.field-meta.xml
<CustomField>
    <fullName>FileName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FileName</label>
    <length>20</length>
    <type>Text</type>
</CustomField>