force-app/main/default/objects/Correspondence_Fulfilment__c/fields/FName__c.field-meta.xml
<CustomField>
    <fullName>FName__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>