force-app/main/default/objects/Correspondence_Fulfilment__c/fields/Hcode__c.field-meta.xml
<CustomField>
    <fullName>Hcode__c</fullName>
    <formula>&apos;0&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Always 0.00</label>
    <type>Text</type>
</CustomField>