force-app/main/default/objects/Correspondence_Fulfilment__c/fields/Letter_head__c.field-meta.xml
<CustomField>
    <fullName>Letter_head__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Letter head</label>
    <length>255</length>
    <type>Text</type>
</CustomField>