force-app/main/default/objects/Correspondence_Fulfilment__c/fields/LetterDate__c.field-meta.xml
<CustomField>
    <fullName>LetterDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Letter Date</label>
    <type>Date</type>
</CustomField>