force-app/main/default/objects/Correspondence_Fulfilment__c/fields/LetterDateFeed__c.field-meta.xml
<CustomField>
    <fullName>LetterDateFeed__c</fullName>
    <description>LetterDate - Date format Feed Outbound.</description>
    <formula>MID( TEXT(CreatedDate) , 6, 2)+&quot;&quot;+MID(TEXT(CreatedDate) , 9, 2)+&quot;&quot;+MID( TEXT(CreatedDate) , 0, 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LetterDateFeed</label>
    <type>Text</type>
</CustomField>