force-app/main/default/objects/Correspondence_Fulfilment__c/fields/LetterDesc__c.field-meta.xml
<CustomField>
    <fullName>LetterDesc__c</fullName>
    <description>Feed outbound- Correspondence</description>
    <formula>DocType__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Letter</label>
    <type>Text</type>
</CustomField>