force-app/main/default/objects/Correspondence_Fulfilment__c/fields/LName__c.field-meta.xml
<CustomField>
    <fullName>LName__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>