force-app/main/default/objects/Correspondence_Fulfilment__c/fields/MasterId__c.field-meta.xml
<CustomField>
    <fullName>MasterId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Master ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>