force-app/main/default/objects/Correspondence_Fulfilment__c/fields/MName__c.field-meta.xml
<CustomField>
    <fullName>MName__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>