force-app/main/default/objects/Correspondence_Fulfilment__c/fields/Name_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Name_Suffix__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Name Suffix</label>
    <length>20</length>
    <type>Text</type>
</CustomField>