force-app/main/default/objects/Correspondence_Fulfilment__c/fields/Nameprefix__c.field-meta.xml
<CustomField>
    <fullName>Nameprefix__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Name Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>