force-app/main/default/objects/Correspondence_Fulfilment__c/fields/Packagecode__c.field-meta.xml
<CustomField>
    <fullName>Packagecode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Package Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>