force-app/main/default/objects/Correspondence_Fulfilment__c/fields/Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reimbursement</label>
    <referenceTo>Reimbursement__c</referenceTo>
    <relationshipLabel>Correspondence &amp; Fulfilments</relationshipLabel>
    <relationshipName>Correspondence_Fulfilments</relationshipName>
    <type>Lookup</type>
</CustomField>