force-app/main/default/objects/Correspondence_Fulfilment__c/fields/Requires_Fulfillment__c.field-meta.xml
<CustomField>
    <fullName>Requires_Fulfillment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Fulfillment</label>
    <type>Checkbox</type>
</CustomField>