force-app/main/default/objects/Correspondence_Fulfilment__c/fields/RunDate__c.field-meta.xml
<CustomField>
    <fullName>RunDate__c</fullName>
    <formula>today()</formula>
    <label>Run Date</label>
    <type>Date</type>
</CustomField>