force-app/main/default/objects/Correspondence_Fulfilment__c/fields/TenantId__c.field-meta.xml
<CustomField>
    <fullName>TenantId__c</fullName>
    <description>Feed outbound- Correspondence</description>
    <formula>&apos;ALORICAALTRIA&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TenantId</label>
    <type>Text</type>
</CustomField>