force-app/main/default/objects/Correspondence_Fulfilment__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Zip</label>
    <length>7</length>
    <type>Text</type>
</CustomField>