force-app/main/default/objects/Correspondence_Fulfilment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>DocType__c</columns>
    <columns>Extract_Date__c</columns>
    <columns>FName__c</columns>
    <columns>LName__c</columns>
    <columns>LetterDate__c</columns>
    <columns>Packagecode__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OBJECT_ID</columns>
    <columns>Reimbursement__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>